limit the number of pop-up windows to add content, fix component overlap, add explanations to blocked buttons, limit the number of attempts and points per answer

--- a/src/modals/courseStructureActions/CourseStructureActions.module.css
+++ b/src/modals/courseStructureActions/CourseStructureActions.module.css
@@ -12,6 +12,7 @@
 
 	transform: translateX(-10%) translateY(10%);
 	box-shadow: 0px 0px 16px 0px rgba(33, 37, 41, 0.02);
+	z-index: 20;
 }
 .action {
 	display: flex;
